--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form id="loginForm">
-      <h2>Login</h2>
-      <input type="text" id="loginUsername" placeholder="Username" required />
-      <input
-        type="password"
-        id="loginPassword"
-        placeholder="Password"
-        required
-      />
-      <button type="submit">Login</button>
-      <p>Don't have an account? <a href="signup.html">Signup</a></p>
-    </form>
-
+    <div>
+      <form id="loginForm">
+        <h2>Login</h2>
+        <input type="text" id="loginUsername" placeholder="Username" required />
+        <input
+          type="password"
+          id="loginPassword"
+          placeholder="Password"
+          required
+        />
+        <button type="submit">Login</button>
+        <p>Don't have an account? <a href="signup.html">Signup</a></p>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
