--- a/signup.html
+++ b/signup.html
@@ -6,19 +6,25 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form id="signupForm">
-      <h2>Signup</h2>
-      <input type="text" id="signupUsername" placeholder="Username" required />
-      <input
-        type="password"
-        id="signupPassword"
-        placeholder="Password"
-        required
-      />
-      <button type="submit">Signup</button>
-      <p>Already have an account? <a href="index.html">Login</a></p>
-    </form>
-
+    <div>
+      <form id="signupForm">
+        <h2>Signup</h2>
+        <input
+          type="text"
+          id="signupUsername"
+          placeholder="Username"
+          required
+        />
+        <input
+          type="password"
+          id="signupPassword"
+          placeholder="Password"
+          required
+        />
+        <button type="submit">Signup</button>
+        <p>Already have an account? <a href="index.html">Login</a></p>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
